# blosc

./: .Rbuildignore  .gitattributes  .gitignore  404.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: blosc-package.R  compress.R  cpp11.R  r2dtype.R
articles/: blosc-compression.html  blosc.html  dtypes.html  index.html
data-raw/: DATASET.R  bigendian.npy  littleendian.npy
man/: blosc-package.Rd  blosc.Rd  blosc_compress.Rd  blosc_info.Rd  dtype.Rd
news/: index.html
pkgdown/favicon/: site.webmanifest
reference/: blosc-package.html  blosc.html  blosc_decompress.html  blosc_info.html  dtype.html  dtype_to_r.html  index.html
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  blosc-feats.cpp  code.cpp  compress.cpp  cpp11.cpp  dtype.cpp  umHalf.h  umHalf.inl
tests/: testthat.R
tests/testthat/: test_compress.R  test_dev.R  test_encode.R  test_exceptions.R
tests/testthat/testdata/: testdata.rdata
tools/: macos.R  version.cpp  winlibs.R
vignettes/: blosc-compression.Rmd  blosc.Rmd  dtypes.Rmd
